--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -27,6 +27,9 @@
         <log4j.version>1.2.17</log4j.version>
         <gson.version>2.8.4</gson.version>
         <asura-builder.version>0.0.1</asura-builder.version>
+
+        <!-- properties -->
+        <js.interpreter>/usr/bin/js52</js.interpreter>
     </properties>
 
     <repositories>
@@ -160,6 +163,12 @@
                     <includePluginDependencies>true</includePluginDependencies>
                     <mainClass>pt.up.fc.dcc.asura.builder.GameServer</mainClass>
                     <commandlineArgs>${artifactId} ${package}.${gameName}Manager java solutions/My${gameName}Player.java player-java es6 solutions/My${gameName}PlayerES6.js player-es6</commandlineArgs>
+                    <systemProperties>
+                        <systemProperty>
+                            <key>js.interpreter</key>
+                            <value>${js.interpreter}</value>
+                        </systemProperty>
+                    </systemProperties>
                 </configuration>
             </plugin>
         </plugins>
